--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -41,10 +41,10 @@
     <hr>
     <div class="row align-items-center justify-content-md-between">
       <div class="col-md-6">
-        <div class="copyright">
+        <!-- <div class="copyright">
           &copy; {{test | date: 'yyyy'}}
           <a href="https://www.creative-tim.com?ref=adsa-footer" target="_blank">Drobee</a>.
-        </div>
+        </div> -->
       </div>
       <!-- <div class="col-md-6">
         <ul class="nav nav-footer justify-content-end">
