--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -199,13 +199,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" *ngFor="let user of users ">
           <div class="px-4">
-            <img src="./assets/img/theme/team-1-800x800.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+            <img src="{{user.image.url}} " class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="height: 150px; width: 150px;">
             <div class="pt-4 text-center">
               <h5 class="title">
-                <span class="d-block mb-1">Ryan Tompson</span>
-                <small class="h6 text-muted">Web Developer</small>
+                <span class="d-block mb-1">{{user.firstname}} {{user.lastname}}</span>
+                <small class="h6 text-muted">Administration</small>
               </h5>
               <div class="mt-3">
                 <a href="javascript:void(0)" class="btn btn-warning btn-icon-only rounded-circle">
@@ -221,7 +221,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <!-- <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
           <div class="px-4">
             <img src="./assets/img/theme/team-2-800x800.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
             <div class="pt-4 text-center">
@@ -286,7 +286,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
