--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -14,7 +14,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-5">
           <div class="card bg-secondary shadow border-0">
-            <div class="card-header bg-white pb-5">
+            <!-- <div class="card-header bg-white pb-5">
               <div class="text-muted text-center mb-3">
                 <small>Sign up with</small>
               </div>
@@ -32,12 +32,12 @@
                   <span class="btn-inner--text">Google</span>
                 </a>
               </div>
-            </div>
+            </div> -->
             <div class="card-body px-lg-5 py-lg-5">
               <div class="text-center text-muted mb-4">
                 <small>Or sign up with credentials</small>
               </div>
-              <form role="form">
+              <!-- <form role="form">
                 <div class="form-group" [ngClass]="{'focused':focus===true}">
                   <div class="input-group input-group-alternative mb-3">
                     <div class="input-group-prepend">
@@ -81,6 +81,138 @@
                 </div>
                 <div class="text-center">
                   <button type="button" class="btn btn-primary mt-4">Create account</button>
+                </div>
+              </form> -->
+              <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+                <div class="form-group mb-3">
+                  <div class="input-group input-group-alternative">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="ni ni-circle-08"></i></span>
+                  </div>
+                  <input placeholder="username" type="text" class="form-control" name="username" [(ngModel)]="form.username" required
+                    minlength="3" maxlength="20" #username="ngModel" />
+                  <div class="alert-danger" *ngIf="username.errors && f.submitted">
+                    <div *ngIf="username.errors.required">Username is required</div>
+                    <div *ngIf="username.errors.minlength">
+                      Username must be at least 3 characters
+                    </div>
+                    <div *ngIf="username.errors.maxlength">
+                      Username must be at most 20 characters
+                    </div>
+                  </div>
+                </div>
+                </div>
+                <div class="form-group mb-3">
+                  <div class="input-group input-group-alternative">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="ni ni-single-02"></i></span>
+                  </div>
+                  <input  placeholder="firstname" type="text" class="form-control" name="firstname" [(ngModel)]="form.firstname" required
+                    minlength="3" maxlength="20" #firstname="ngModel" />
+                  <div class="alert-danger" *ngIf="firstname.errors && f.submitted">
+                    <div *ngIf="firstname.errors.required">firstname is required</div>
+                    <div *ngIf="firstname.errors.minlength">
+                      firstname must be at least 3 characters
+                    </div>
+                    <div *ngIf="firstname.errors.maxlength">
+                      firstname must be at most 20 characters
+                    </div>
+                  </div>
+                </div>
+                </div>
+                <div class="form-group mb-3">
+                  <div class="input-group input-group-alternative">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="ni ni-single-02"></i></span>
+                  </div>
+                  <input placeholder="lastname" type="text" class="form-control" name="lastname" [(ngModel)]="form.lastname" required
+                    minlength="3" maxlength="20" #lastname="ngModel" />
+                  <div class="alert-danger" *ngIf="lastname.errors && f.submitted">
+                    <div *ngIf="lastname.errors.required">lastname is required</div>
+                    <div *ngIf="lastname.errors.minlength">
+                      lastname must be at least 3 characters
+                    </div>
+                    <div *ngIf="lastname.errors.maxlength">
+                      lastname must be at most 20 characters
+                    </div>
+                  </div>
+                </div>
+                </div>
+                <div class="form-group mb-3">
+                  <div class="input-group input-group-alternative">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="ni ni-mobile-button"></i></span>
+                  </div>
+                  <input placeholder="phone" type="text" class="form-control" name="phone" [(ngModel)]="form.phone" required minlength="8"
+                    maxlength="15" #phone="ngModel" />
+                  <div class="alert-danger" *ngIf="phone.errors && f.submitted">
+                    <div *ngIf="phone.errors.required">phone is required</div>
+                    <div *ngIf="phone.errors.minlength">
+                      phone must be at least 8 number
+                    </div>
+                    <div *ngIf="phone.errors.maxlength">
+                      phone must be at most 15 number
+                    </div>
+                  </div>
+                </div>
+                </div>
+                <div class="form-group mb-3">
+                  <div class="input-group input-group-alternative">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="ni ni-building"></i></span>
+                  </div>
+                  <input placeholder="address" type="text" class="form-control" name="address" [(ngModel)]="form.address" required
+                    minlength="8" maxlength="50" #address="ngModel" />
+                  <div class="alert-danger" *ngIf="address.errors && f.submitted">
+                    <div *ngIf="address.errors.required">address is required</div>
+                    <div *ngIf="address.errors.minlength">
+                      address must be at least 8 characters
+                    </div>
+                    <div *ngIf="address.errors.maxlength">
+                      address must be at most 15 characters
+                    </div>
+                  </div>
+                  </div>
+                </div>
+                <div class="form-group mb-3">
+                  <div class="input-group input-group-alternative">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                  </div>
+                  <input placeholder="Email" type="email" class="form-control" name="email" [(ngModel)]="form.email" required email
+                    #email="ngModel" />
+                  <div class="alert-danger" *ngIf="email.errors && f.submitted">
+                    <div *ngIf="email.errors.required">Email is required</div>
+                    <div *ngIf="email.errors.email">
+                      Email must be a valid email address
+                    </div>
+                  </div>
+                </div>
+                </div>
+                <div class="form-group mb-3">
+                  <div class="input-group input-group-alternative">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                  </div>
+                  <input  placeholder="Password" type="password" class="form-control" name="password" [(ngModel)]="form.password" required
+                    minlength="6" #password="ngModel" />
+                  <div class="alert-danger" *ngIf="password.errors && f.submitted">
+                    <div *ngIf="password.errors.required">Password is required</div>
+                    <div *ngIf="password.errors.minlength">
+                      Password must be at least 6 characters
+                    </div>
+                  </div>
+                </div>
+                </div>
+                <div class="form-group">
+                  <button class="btn btn-primary btn-block">Sign Up</button>
+                </div>
+
+                <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
+                  Signup failed!<br />{{ errorMessage }}
+                </div>
+                <div class="alert alert-success" *ngIf="isSuccessful">
+                  Your registration is successful!
                 </div>
               </form>
             </div>
