--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -204,7 +204,7 @@
             <img src="{{user.image.url}} " class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="height: 150px; width: 150px;">
             <div class="pt-4 text-center">
               <h5 class="title">
-                <span class="d-block mb-1">{{user.firstname}} {{user.lastname}}</span>
+                <span class="d-block mb-1">{{user.firstname}} <br> {{user.lastname}}</span>
                 <small class="h6 text-muted">Administration</small>
               </h5>
               <div class="mt-3">
