--- a/src/app/admin/commande/edit/edit.component.html
+++ b/src/app/admin/commande/edit/edit.component.html
@@ -1,1 +1,47 @@
-<p>edit works!</p>
+<div>
+  <div class="container">
+    <header class="jumbotron">
+
+    </header>
+
+    <form class="row g-3">
+
+      <div class="col-12">
+        <label for="offername">selectionner un offer</label>
+        <select name="offer" (change)="changeoffer($event)" class="form-control">
+          <option selected={{commande.offername}}>{{commande.offername}}</option>
+          <option value="{{off.name}}" *ngFor="let off of offers ">
+            {{off.name}}
+          </option>
+        </select>
+      </div>
+      <div class="col-12">
+        <label for="inputCity" class="form-label">nbrunit</label>
+        <input type="number" class="form-control" id="nbrunit" value={{commande.nbrunit}} />
+      </div>
+      <div class="col-12">
+        <label for="inputregion" class="form-label">region</label>
+        <input type="text" class="form-control" id="region" value={{commande.region}} />
+      </div>
+      <div class="col-12">
+        <label for="inputdate" class="form-label">date</label>
+        <input disabled="" type="date" class="form-control" id="date" value="{{ commande.date}}" />
+      </div>
+      <div class="col-12">
+        <label for="inputstatus" class="form-label">status</label>
+        <input disabled="" type="text" class="form-control" id="status" value={{commande.status}} />
+      </div>
+      <br>
+
+      <br>
+      <br>
+      <br>
+      <div class="col-12">
+
+        <div class="col-md-0 offset-md-11">
+          <button class="btn btn-warning" type="submit">update</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
