--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
     <section class="section section-lg section-shaped ">
       <ngb-carousel>
         <ng-template ngbSlide>
-          <img class="d-block w-100" src="assets/img/theme/img-1-1200x1000.jpg" alt="First slide">
+          <img class="d-block w-100" src="assets/img/theme/test.jpg" alt="First slide">
         </ng-template>
         <ng-template ngbSlide>
           <img class="d-block w-100" src="assets/img/theme/img-2-1200x1000.jpg" alt="Second slide">
@@ -52,7 +52,7 @@
             <div class="icon icon-lg icon-shape icon-shape-success shadow rounded-circle mb-5">
               <i class="ni ni-settings-gear-65"></i>
             </div>
-            <h3>Awesome features</h3>
+            <h3>About Us</h3>
             <p>The kit comes with three pre-built pages to help you get started faster. You can change the text and images and you're good to go.</p>
             <ul class="list-unstyled mt-5">
               <li class="py-2">
@@ -98,18 +98,24 @@
     </div>
   </section>
   <section class="section bg-secondary">
-    <div class="container">
+    <div class="row justify-content-center text-center mb-lg">
+      <div class="col-lg-8">
+        <h2 class="display-3">Services</h2>
+      </div>
+    </div>
+    <div class="container" *ngFor="let offer of offers" >
+      <br><br>
       <div class="row row-grid align-items-center">
         <div class="col-md-6">
           <div class="card bg-default shadow border-0">
-            <img src="./assets/img/theme/img-1-1200x1000.jpg" class="card-img-top">
+            <img src="{{offer.image.url}}" class="card-img-top">
             <blockquote class="card-blockquote">
               <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95" class="svg-bg">
                 <polygon points="0,52 583,95 0,95" class="fill-default" />
                 <polygon points="0,42 583,95 683,0 0,95" opacity=".2" class="fill-default" />
               </svg>
-              <h4 class="display-3 font-weight-bold text-white">Design System</h4>
-              <p class="lead text-italic text-white">The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer, and that process will continue whatever happens.</p>
+              <!-- <h4 class="display-3 font-weight-bold text-white">Design System</h4>
+              <p class="lead text-italic text-white">The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer, and that process will continue whatever happens.</p> -->
             </blockquote>
           </div>
         </div>
@@ -118,7 +124,7 @@
             <div class="icon icon-lg icon-shape icon-shape-warning shadow rounded-circle mb-5">
               <i class="ni ni-settings"></i>
             </div>
-            <h3>Our customers</h3>
+            <h3>{{offer.name}}</h3>
             <p class="lead">Don't let your uses guess by attaching tooltips and popoves to any element. Just make sure you enable them first via JavaScript.</p>
             <p>The kit comes with three pre-built pages to help you get started faster. You can change the text and images and you're good to go.</p>
             <p>The kit comes with three pre-built pages to help you get started faster. You can change the text and images and you're good to go.</p>
@@ -290,7 +296,7 @@
       </div>
     </div>
   </section>
-  <section class="section section-lg pt-0">
+  <!-- <section class="section section-lg pt-0">
     <div class="container">
       <div class="card bg-gradient-warning shadow-lg border-0">
         <div class="p-5">
@@ -306,8 +312,8 @@
         </div>
       </div>
     </div>
-  </section>
-  <section class="section section-lg bg-gradient-default">
+  </section> -->
+  <!-- <section class="section section-lg bg-gradient-default">
     <div class="container pt-lg pb-300">
       <div class="row text-center justify-content-center">
         <div class="col-lg-10">
@@ -339,14 +345,14 @@
         </div>
       </div>
     </div>
-    <!-- SVG separator -->
+    SVG separator 
     <div class="separator separator-bottom separator-skew zindex-100">
       <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
         <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
       </svg>
     </div>
-  </section>
-  <section class="section section-lg pt-lg-0 section-contact-us">
+  </section> -->
+  <!-- <section class="section section-lg pt-lg-0 section-contact-us">
     <div class="container">
       <div class="row justify-content-center mt--300">
         <div class="col-lg-8">
@@ -381,20 +387,20 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section class="section section-lg">
     <div class="container">
       <div class="row row-grid justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="display-3">Do you love this awesome
-            <span class="text-success">Design System for Angular?</span>
+          <h2 class="display-3"> Partners
+            <!-- <span class="text-success">Design System for Angular?</span> -->
           </h2>
-          <p class="lead">Cause if you do, it can be yours for FREE. Hit the button below to navigate to Creative Tim where you can find the Design System in Angular. Start a new project or give an old Angular project a new look!</p>
+          <!-- <p class="lead">Cause if you do, it can be yours for FREE. Hit the button below to navigate to Creative Tim where you can find the Design System in Angular. Start a new project or give an old Angular project a new look!</p> -->
           <div class="btn-wrapper">
-            <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-landing-page" class="btn btn-primary mb-3 mb-sm-0">Download Angular</a>
+            <!-- <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-landing-page" class="btn btn-primary mb-3 mb-sm-0">Download Angular</a> -->
           </div>
           <div class="text-center">
-            <h4 class="display-4 mb-5 mt-5">Available on these technologies</h4>
+            <!-- <h4 class="display-4 mb-5 mt-5">Available on these technologies</h4> -->
             <div class="row justify-content-center">
               <div class="col-lg-2 col-4">
                 <a href="https://www.creative-tim.com/product/argon-design-system?ref=adsa-landing-page" target="_blank" placement="top" ngbTooltip="Bootstrap 4 - Most popular front-end component library">
