--- a/src/app/admin/user/user.component.html
+++ b/src/app/admin/user/user.component.html
@@ -4,7 +4,7 @@
       
     </header>
     <div>
-        <button class="btn btn-1 btn-info" type="button"  placement="top"    ngbTooltip="add new user">ADD</button> 
+        <button class="btn btn-1 btn-info" type="button"  placement="top"    ngbTooltip="add new user" (click)="adduser()">ADD</button> 
         <br>
         <br>
       <div class="table-responsive-md">
@@ -44,7 +44,7 @@
                       </a>
                     <div class="dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu>
                       <a class="dropdown-item" href="javascript:void(0)">delete</a>
-                      <a class="dropdown-item" href="javascript:void(0)">update</a>
+                      <a class="dropdown-item" (click)="update(user.username)">update</a>
                     
                     </div>
                   </li>
