--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <main>
   <section class="section section-shaped section-lg">
-    <div class="shape shape-style-1 shape-primary alpha-4">
+    <div class="shape shape-style-1 bg-gradient-default">
       <span></span>
       <span></span>
       <span></span>
